--- a/adopt.html
+++ b/adopt.html
@@ -16,7 +16,7 @@
         <a href = "home.html" class = "home">Home</a>
         <a href = "adopt.html" class = "adopt">Adopt</a>
         <a href = "lost.html" class = "lost">Lost</a>
-        <a href = "vet.html" class = "vet-services">Veterinary Services</a>
+        <a href = "veterinary.html" class = "vet-services">Veterinary Services</a>
       </div>
 
 
