--- a/lost.html
+++ b/lost.html
@@ -14,7 +14,7 @@
        
         .lost-grid{
             display :grid;
-            grid-template-columns: 500px 500px 1fr;
+            grid-template-columns: 500px 500px 420px;
         }
 
         .lost-page{
