--- a/veterinary.html
+++ b/veterinary.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Galada&family=Headland+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/corner-circle.css">
-    <link rel="stylesheet" href="veterinary-styles/vet.css">
+    <link rel="stylesheet" href="../styles/navbar.css">
+    <link rel="stylesheet" href="../styles/corner-circle.css">
+    <link rel="stylesheet" href="../styles/vet.css">
 
 </head>
 
@@ -70,7 +70,7 @@
                   <div class = "veterinarians">
                     <div class = "vet-info">
                       <div class = "vet-profile-pic">
-                        vet profile pic 
+                        
                       </div>
   
                       <div clas = "vet-contact">
