--- a/signin.html
+++ b/signin.html
@@ -7,78 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Galada&family=Headland+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
-    <style>
-        body {
-            margin: 0;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f5f5f5;
-            font-family: 'Montserrat', sans-serif;
-        }
+    <link rel="stylesheet" href="../styles/signin.css">
 
-        .signin-form {
-            background-color: white;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(147, 133, 226, 0.2);
-            width: 100%;
-            max-width: 400px;
-        }
-
-        .site-name {
-            font-family: Galada;
-            font-size: 2.5rem;
-            text-align: center;
-            margin-bottom: 2rem;
-            color: #333;
-        }
-
-        .signin-info form {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .email, .password {
-            height: 50px;
-            width: 100%;
-            border-radius: 8px;
-            border: 1px solid #ddd;
-            padding: 0 1rem;
-            font-size: 1rem;
-            box-sizing: border-box;
-        }
-
-        .email:focus, .password:focus {
-            outline: none;
-            border-color: rgba(147, 133, 226, 0.5);
-        }
-
-        .line {
-            display: block;
-            text-align: center;
-            color: #ddd;
-            margin: 1.5rem 0;
-        }
-
-        .signin-btn {
-            width: 100%;
-            padding: 1rem;
-            border-radius: 8px;
-            border: none;
-            background-color: rgba(147, 133, 226, 0.8);
-            color: white;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .signin-btn:hover {
-            background-color: rgba(147, 133, 226, 1);
-        }
-    </style>
 
 </head>
 <body>
